--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="2023 public holidays in US, UK, Romania and Portugal"
+      content="Public holidays in US, UK, Romania and Portugal"
     />
-    <title>2023 public holidays in US, UK, Romania and Portugal</title>
+    <title>Public holidays in US, UK, Romania and Portugal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
