--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Public holidays in US, UK, Romania and Portugal"
-    />
-    <title>Public holidays in US, UK, Romania and Portugal</title>
+    <meta name="description" content="Every public holiday in the whole world" />
+    <title>Every public holiday</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
